<resources>
    <string name="app_name">Language Sample</string>
    <string name="app_language">Language</string>
    <string name="test_coroutines">Test Coroutines</string>
    <string name="test_flow" translatable="false">Test Flow</string>
    <string name="test_channel" translatable="false">Test Channel</string>
    <string name="test_sequence" translatable="false">Test Sequence</string>
    <string name="test_start" translatable="false">Test Coroutine Start</string>
    <string name="test_with_context" translatable="false">Test With Context</string>
    <string name="test_coroutine_non_block1">Test Coroutines Non-Block 1</string>
    <string name="test_coroutine_non_block2">Test Coroutines Non-Block 2</string>
</resources>
