<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="bt_test_flow,bt_test_channel,bt_test_sequence,bt_test_coroutines,bt_test_coroutines_non_block1,bt_test_coroutines_non_block2,bt_test_start,bt_test_with_context"
        app:flow_horizontalAlign="center"
        app:flow_verticalGap="20dp"
        app:flow_verticalStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_test_flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/test_flow"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_test_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/test_channel"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_test_sequence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/test_sequence"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_test_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/test_start"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_test_with_context"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/test_with_context"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_test_coroutines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/test_coroutines"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_test_coroutines_non_block1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/test_coroutine_non_block1"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_test_coroutines_non_block2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/test_coroutine_non_block2"
        android:textAllCaps="false" />

</androidx.constraintlayout.widget.ConstraintLayout>